2021-10-04 Danilo Chang

	* Update TrainData command
	* Implement command: sortIdx, repeat

2021-10-03 Danilo Chang

	* Implement command: solveCubic, solvePoly
	* Implement command: estimateAffine2D
	* Improve findHomography command (interface changed)

2021-10-02 Danilo Chang

	* Apply Christian's patch:
	  Improved Tk photo support plus POC VecTcl support
	* configure.ac: Add -std=c++11 flag
	  For OpenCV 4.x+ requires enabled C++11 support issue.
	* Implement command: computeECC, findTransformECC
	* Implement command: cornerEigenValsAndVecs, cornerMinEigenVal
	* Update BackgroundSubtractorMOG2 command

2021-10-01 Danilo Chang

	* Implement command: BackgroundSubtractorKNN
	* Implement command: convexityDefects, matchShapes
	* Improve convexHull command
	* Apply Christian's patch

2021-09-30 Danilo Chang

	* Change AKAZE Diffusivity type variable's name (AKAZE to KAZE)
	* Implement command: KAZE
	* Apply Christian's patch
	* Implement command: BOWKMeansTrainer, BOWImgDescriptorExtractor
	* Implement command: insertChannel
	* Implement command: arcLength, buildPyramid, pointPolygonTest

2021-09-29 Danilo Chang

	* Implement command: extractChannel
	* Implement command: MSER

2021-09-28 Danilo Chang

	* Implement command: computeCorrespondEpilines, findFundamentalMat
	* Implement command: getBuildInformation
	* Implement command: solvePnP

2021-09-27 Danilo Chang

	* Implement command: initUndistortRectifyMap, projectPoints
	* Implement command: getOptimalNewCameraMatrix, undistort
	* Implement command: calibrateCamera
	* Implement command: createHanningWindow, phaseCorrelate
	* Implement command: setRNGSeed, randShuffle
	* Implement command: warpPolar

2021-09-26 Danilo Chang

	* Implement command: fillPoly, CLAHE, EMD, SVDecomp, SVBackSubst

2021-09-25 Danilo Chang

	* Apply Christian's patch (POC thread support)

2021-09-24 Danilo Chang

	* Implement command: minMaxIdx
	* Implement command: RTrees, ANN_MLP
	* Apply Christian's patch

2021-09-23 Danilo Chang
