@@ -6,7 +6,7 @@ This project is a Tcl extension for [OpenCV](https://opencv.org/) library.
 OpenCV (Open Source Computer Vision Library) is a library of programming
 functions mainly aimed at real-time computer vision.
 
-This extension requires OpenCV 4.4.x or newer.
+This extension requires OpenCV 4.5.0 or newer.
 
 
 Building this extension
@@ -451,6 +451,15 @@ Please notice, KAZE command will only have 1 instance.
     SIFT close
 
 Please notice, SIFT command will only have 1 instance.
+
+    ::cv::AffineFeature backend ?maxTilt minTilt tiltStep rotateStepBase?
+    AffineFeature detect matrix
+    AffineFeature compute matrix keypoints
+    AffineFeature detectAndCompute matrix
+    AffineFeature close
+
+Please notice, AffineFeature command will only have 1 instance.
+And backend supports SIFT, KAZE, ORB, AKAZE and BRISK.
 
     ::cv::BFMatcher normType crossCheck
     BFMatcher match queryDescriptors trainDescriptors
@@ -3285,6 +3294,100 @@ SIFT, Feature Matching + Homography to find Objects -
         $d2 close
         $sift close
         $fmatcher close
+
+        ::cv::namedWindow "Display Image" $::cv::WINDOW_AUTOSIZE
+        ::cv::imshow "Display Image" $match1
+        ::cv::waitKey 0
+        ::cv::destroyAllWindows
+
+        $match1 close
+        $img1 close
+        $img2 close
+    } on error {em} {
+        puts $em
+    }
+
+
+AffineFeature with KAZE, Feature Matching + Homography to find Objects -
+
+    package require opencv
+
+    #
+    # From https://github.com/opencv/opencv/tree/master/samples/data
+    #
+    set filename1 "box.png"
+    set filename2 "box_in_scene.png"
+
+    try {
+        set img1 [::cv::imread $filename1 0]
+        set img2 [::cv::imread $filename2 0]
+
+        set backend [::cv::KAZE]
+        set asift [::cv::AffineFeature $backend]
+
+        set result1 [$asift detectAndCompute $img1]
+        set result2 [$asift detectAndCompute $img2]
+        set kp1 [lindex $result1 0]
+        set d1 [lindex $result1 1]
+        set kp2 [lindex $result2 0]
+        set d2 [lindex $result2 1]
+
+        set matcher [::cv::FlannBasedMatcher FLANN_INDEX_KDTREE [list 5]]
+        set matches [$matcher knnMatch $d1 $d2 2]
+
+        # Apply ratio test
+        set dmatches [list]
+        foreach match $matches {
+            foreach {m n} $match {
+                set mdistance [lindex $m 3]
+                set ndistance [lindex $n 3]
+                if {$mdistance < [expr 0.7 * $ndistance]} {
+                    lappend dmatches $m
+                }
+            }
+        }
+
+        set srcPts [list]
+        set dstPts [list]
+        foreach match $dmatches {
+            set spoint [lindex $kp1 [lindex $match 0]]
+            set dpoint [lindex $kp2 [lindex $match 1]]
+
+            lappend srcPts [lindex $spoint 0] [lindex $spoint 1]
+            lappend dstPts [lindex $dpoint 0] [lindex $dpoint 1]
+        }
+
+        # Find homography matrix and do perspective transform
+        set src_pts [::cv::Mat::Mat 1 [expr [llength $srcPts]/2] $::cv::CV_32FC2]
+        $src_pts setData $srcPts
+        set dst_pts [::cv::Mat::Mat 1 [expr [llength $dstPts]/2] $::cv::CV_32FC2]
+        $dst_pts setData $dstPts
+        set MRes [::cv::findHomography $src_pts $dst_pts $::cv::RANSAC 5.0 2000 0.995]
+        set M [lindex $MRes 0]
+        set Mask [lindex $MRes 1]
+        if {![$M empty]} {
+            set h [$img1 rows]
+            set w [$img1 cols]
+            set pts [list 0 0 0 [expr $h-1] [expr $w-1] [expr $h-1] [expr $w-1] 0]
+            set dst [::cv::perspectiveTransform $pts $M]
+            ::cv::polylines $img2 $dst 1 1 [list 255 255 255 0] 5
+        }
+
+        $M close
+        $Mask close
+        $src_pts close
+        $dst_pts close
+
+        set mcolor [list 255 0 0 0]
+        set scolor [list 0 0 255 0]
+        set match1 [::cv::drawMatches $img1 $kp1 $img2 $kp2 $dmatches None \
+                    $mcolor $scolor $::cv::DRAW_MATCHES_FLAGS_NOT_DRAW_SINGLE_POINTS]
+
+        $d1 close
+        $d2 close
+        $asift close
+        $backend close
+        $matcher close
 
         ::cv::namedWindow "Display Image" $::cv::WINDOW_AUTOSIZE
         ::cv::imshow "Display Image" $match1
